Native file input is transparent, steals clicks from visible dummy button. Using CSS text-overflow on the right of the filename. fixes #73

--- a/static/sass/screenly.scss
+++ b/static/sass/screenly.scss
@@ -140,6 +140,23 @@ form .control-group .controls {
 }
 
 input[name="file_upload"] {
-    line-height: 20px;
-    margin-top: 4px;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.controls {
+    position: relative;
+    width:auto;
+}
+
+#file_upload_label {
+    position: absolute;
+    top: 5px;
+    left: 105px;
+    right: 0;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
